--- a/public/styles/scss/_vars.scss
+++ b/public/styles/scss/_vars.scss
@@ -1,8 +1,8 @@
-$dark: #201F1F;
+$dark: #151414;
 $light: rgb(249, 247, 241);
 $lightBlue: #A1CBD3;
 $lightGreen: #11A972;
-$yellow: #f7e27c;
+$yellow: #F0D549;
 $red: #d95133;
 $blue: #276dc9;
 $pd-sm: 1rem;
