--- a/public/styles/scss/_layout.scss
+++ b/public/styles/scss/_layout.scss
@@ -8,7 +8,10 @@
 	grid-gap: 1.4vw;
 
 	.paragraph-wrapper {
-		width: 14.583vw;
+		width: 12vw;
+		p {
+			line-height: 1.4vw;
+		}
 	}
 
 	.heading-wrapper {
@@ -16,31 +19,35 @@
 	}
 
 	.-heading-medium {
-		width: 20vw;
+		width: 15vw;
+		font-size: 5vw;
+		letter-spacing: -0.3vw;
+		line-height: 4vw;
+		text-transform: uppercase;
 	}
 
 	&__1 {
-		grid-column: span 4;
+		grid-column: 3/7;
 		grid-row: 1/2;
 	}
 
 	&__2 {
-		grid-column: 5/9;
+		grid-column: 6/9;
 		grid-row: 2/3;
 	}
 
 	&__3 {
-		grid-column: 9/13;
+		grid-column: 9/14;
 		grid-row: 4/5;
 	}
 
 	&__4 {
-		grid-column: 5/9;
+		grid-column: 6/9;
 		grid-row: 5/6;
 	}
 
 	&__5 {
-		grid-column: 1/5;
+		grid-column: 3/6;
 		grid-row: 6/7;
 	}
 }
