--- a/public/styles/scss/_specific.scss
+++ b/public/styles/scss/_specific.scss
@@ -1,3 +1,43 @@
+.section-hero {
+.object-container {
+	height: 500px;
+}
+	
+
+	#hero-amperstand {
+		overflow: hidden;
+		font-size: 50vw;
+		color: $yellow;
+		height: 40vw;
+
+		.scroll-cta {
+			font-family: 'Kobe';
+			font-size: 1.5vw;
+			color: $dark;
+			top: 28%;
+			right: 15%;
+			
+			overflow: hidden;
+
+			.scroll-cta-inner {
+				transform: translateY(100%);
+				display: block;
+			}
+
+		}
+		
+ .amperstand-inner {
+	transform: translateY(100%);
+	height: 40vw;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+		
+	}
+}
+
+
 .section-hero__title-wrapper {
 	width: 89vw;
   height: 40vw;
