--- a/public/styles/scss/_header.scss
+++ b/public/styles/scss/_header.scss
@@ -7,7 +7,7 @@ header {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: $pd-sm;
+	padding: $pd-md;
 	z-index: 99999;
 
 	.logo-wrapper {
@@ -28,14 +28,16 @@ header {
 		transition: 300ms ease;
 	}
 
+
+
 	nav {
 		width: 100%;
 		height: 100%;
 		display: flex;
 		align-items: center;
 		justify-content: flex-end;
-		transform: translateY(-100%);
-		display: none;
+		
+		
 
 		ul {
 			li {
@@ -91,6 +93,16 @@ header {
 		&.top {
 			top: 0;
 		}
+	}
+}
+
+.desktop-nav-wrapper {
+	width: 100%;
+	height: 100%;
+
+	nav {
+		width: 100%;
+		height: 100%;
 	}
 }
 
