--- a/public/styles/scss/_utils.scss
+++ b/public/styles/scss/_utils.scss
@@ -11,6 +11,10 @@
 	justify-content: center;
 }
 
+.-justify-between {
+	justify-content: space-between;
+}
+
 .-flex-column {
 	flex-direction: column;
 }
