--- a/public/styles/scss/index.scss
+++ b/public/styles/scss/index.scss
@@ -10,7 +10,7 @@
 @import "utils";
 @import "layout";
 @import "animations";
-
+@import "type";
 
 * {
 	box-sizing: border-box;
@@ -18,12 +18,12 @@
 	padding: 0;
 }
 
-
-html, p {
+html,
+p {
 	height: 100%;
 	width: 100%;
 	line-height: 1.6;
-	font-family: 'Kobe';
+	font-family: "Kobe";
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: none;
@@ -32,4 +32,3 @@ html, p {
 main {
 	min-height: 100vh;
 }
-
