--- a/public/styles/scss/_animations.scss
+++ b/public/styles/scss/_animations.scss
@@ -1,46 +1,30 @@
 .line {
-  transform: translateY(-100%);
-  opacity: 0;
-}
-
-.slide-in {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100%;
-  background: #066bb8;
-  transform-origin: left;
-}
-
-.slide-out {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100%;
-  background: #066bb8;
-  transform-origin: right;
+	transform: translateY(-100%);
+	opacity: 0;
 }
 
 .transition-bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: $yellow;
-  z-index: -99999;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: $yellow;
+	z-index: -99999;
 }
 
-.transition-card {
-  z-index: 999;
-  background-color: $yellow;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+.transition-group {
+	.transition-card {
+		z-index: 999;
+		background-color: $yellow;
+		height: 100%;
+		width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
 
-
+	.transition-out {
+		transform: translateX(-100%);
+	}
 }
