--- a/public/styles/scss/_animations.scss
+++ b/public/styles/scss/_animations.scss
@@ -28,3 +28,15 @@
 		transform: translateX(-100%);
 	}
 }
+
+.transitioner {
+	height: 100vh;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: $yellow;
+	z-index: 9999;
+	transform: translateX(-100%);
+}
+
