--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -846,6 +846,12 @@ body {
   opacity: 0;
 }
 
+.-fade-up {
+  transform: translateY(100%);
+  opacity: 0;
+  display: block;
+}
+
 .transition-bg {
   position: fixed;
   top: 0;
