--- a/public/styles/scss/_utils.scss
+++ b/public/styles/scss/_utils.scss
@@ -19,6 +19,12 @@
 	z-index: 50;
 }
 
+.-heading-small {
+font-size: 3.7rem;	
+line-height: 3.7rem;
+}
+ 
+
 .-flex-column {
 	flex-direction: column;
 }
@@ -36,6 +42,7 @@
 	font-size: 4.8rem;
 	line-height: 5rem;
 }
+
 
 .-pg-small {
 	font-size: 2rem;
