--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -939,3 +939,11 @@ p {
 .App {
   background-color: orange;
 }
+
+main {
+  clip-path: url(#transition-clip);
+}
+
+.transition-mask {
+  position: fixed;
+}
