Implement transition animation

--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -863,6 +863,10 @@ body {
   width: 100%;
 }
 
+#transition-morph__leave {
+  display: none !important;
+}
+
 .transition-path {
   fill: none;
   stroke: white;
