Implement singlre project page

--- a/public/styles/scss/_utils.scss
+++ b/public/styles/scss/_utils.scss
@@ -67,21 +67,30 @@ line-height: 3.7rem;
 	color: $light;
 }
 
+.-bg-green {
+	background-color: $green;
+	color: $light;
+}
+
 .-bg-light {
 	background-color: $light;
+	color: $dark;
 }
 
 
 .-bg-yellow {
 	background-color: $yellow;
+	color: $light;
 }
 
 .-bg-blue {
 	background-color: $blue;
+	color: $light;
 }
 
 .-bg-red {
 	background-color: $red;
+	color: $light;
 }
 
 .-big {
