--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -4,8 +4,11 @@
 @import "global";
 @import "objects/o-h1.scss";
 @import "objects/o-h2.scss";
+@import "objects/o-h3.scss";
+@import "objects/o-h4.scss";
 @import "objects/o-text.scss";
 @import "objects/o-page.scss";
+@import "objects/o-single-project.scss";
 @import "../../components/Containers/o-container.scss";
 @import "../../components/Pages/Projects/c-grid.scss";
 
