--- a/src/styles/scss/objects/o-text.scss
+++ b/src/styles/scss/objects/o-text.scss
@@ -1,7 +1,4 @@
 .o-text {
-  font-family: 'Kobe';
-  font-size: 1.1rem;
-  line-height: 1.8rem;
-  
-  
+  font-family: 'Soehne Body';
+  line-height: 1.55rem;
 }
