--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -2,6 +2,10 @@
 @import "./breakpoints";
 //Utility classes
 
+.-padding-lg {
+	padding: $space-xl 0;
+}
+
 .-padding-huge {
 	padding: $space-xxxl 0;
 }
@@ -212,6 +216,14 @@
 	background-color: black;
 }
 
+.-text-yellow {
+	color: $yellow;
+}
+
+.-text-light {
+	color: $light;
+}
+
 .-ul-small,
 .-text-tiny {
 	font-size: 0.6rem;
@@ -223,6 +235,10 @@
 	.line:nth-of-type(1) {
 		padding-left: 30%;
 	}
+}
+
+.-bold {
+	font-family: 'Kobe Bold';
 }
 
 .-block {
