--- a/src/styles/scss/_vars.module.scss
+++ b/src/styles/scss/_vars.module.scss
@@ -28,13 +28,13 @@ $light: #f5f3ef;
 $dark: #101010;
 $dark2: #2e2e2e;
 $lighterDark: #111111;
-$navy: #12233F;
+$navy: #12233f;
 $red: #030303;
 $green: #c0ff0d;
-$blue: #0A4D98;
+$blue: #0a4d98;
 $yellow: #edc835;
 $pink: #f1b9b8;
-$orange: #E94934;
+$orange: #e94934;
 $grey: rgb(174, 174, 174);
 $purple: #5b487c;
 $gradient-primary: linear-gradient(
@@ -63,16 +63,19 @@ $loader-delay: 0.8;
 $transition: 600ms ease;
 $transition-expo: 1.2s cubic-bezier(1, 0, 0, 1);
 $translate-transition: opacity 0s cubic-bezier(0.35, 0.755, 0.42, 0.95),
-transform 0.3s cubic-bezier(0.35, 0.755, 0.42, 0.95);
+	transform 0.3s cubic-bezier(0.35, 0.755, 0.42, 0.95);
 
 //Shadows
-$shadow: -2px 4px 27px 3px rgba(0,0,0,0.32);
-
-
-
-
+$shadow: -2px 4px 27px 3px rgba(0, 0, 0, 0.32);
 
 :export {
 	loaderDuration: $loader-duration;
 	loaderDelay: $loader-delay;
+	colors: {
+		navy: $navy;
+		red: $red;
+		green: $green;
+		blue: $blue;
+		yellow: $yellow;
+	}
 }
