--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -2,6 +2,7 @@
 @import "vars.module.scss";
 @import "utils";
 @import "global";
+@import "animations";
 @import "objects/o-h1.scss";
 @import "objects/o-h2.scss";
 @import "objects/o-h3.scss";
@@ -11,6 +12,9 @@
 @import "objects/o-single-project.scss";
 @import "../../components/Containers/o-container.scss";
 @import "../../components/Pages/Projects/c-grid.scss";
+@import "../../components/Header/c-header.scss";
+@import "../../components/Link/c-link.scss";
+@import "../../components/Menu/c-menu.scss";
 
 
 
