--- a/src/styles/scss/_vars.module.scss
+++ b/src/styles/scss/_vars.module.scss
@@ -68,6 +68,12 @@ $translate-transition: opacity 0s cubic-bezier(0.35, 0.755, 0.42, 0.95),
 //Shadows
 $shadow: -2px 4px 27px 3px rgba(0, 0, 0, 0.32);
 
+//Font config
+$bodyFont: 'Soehne Body';
+
+//Header vars
+$headerHeight: 75px;
+
 :export {
 	loaderDuration: $loader-duration;
 	loaderDelay: $loader-delay;
