Implement arrow animation

--- a/public/styles/scss/_utils.scss
+++ b/public/styles/scss/_utils.scss
@@ -88,6 +88,11 @@ line-height: 3.7rem;
 	color: $light;
 }
 
+.-bg-navy {
+	background-color: $navy;
+	color: $light;
+}
+
 .-bg-red {
 	background-color: $red;
 	color: $light;
