--- a/src/components/Header/c-header.scss
+++ b/src/components/Header/c-header.scss
@@ -38,17 +38,20 @@
 		height: 20%;
 		width: 20px;
 		transition: 600ms ease;
+		background-color: transparent;
 
 		&.is-active {
 			&::after {
 				top: 50%;
 				transform: rotate(-45deg);
+				background-color: $light;
 			}
 
 			&::before {
 				top: 50%;
 				transform: rotate(45deg);
 				height: 2px;
+				background-color: $light;
 			}
 		}
 
