--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -15,6 +15,8 @@
 @import "../../components/Header/c-header.scss";
 @import "../../components/Link/c-link.scss";
 @import "../../components/Menu/c-menu.scss";
+@import "../../components/CursorFollower/c-follower.scss";
+@import "../../components/Vector/c-arrow.scss";
 
 
 
