--- a/public/styles/scss/_utils.scss
+++ b/public/styles/scss/_utils.scss
@@ -1,6 +1,3 @@
-
-
-
 //Flex utilities
 
 .-display-flex {
@@ -20,10 +17,9 @@
 }
 
 .-heading-small {
-font-size: 3.7rem;	
-line-height: 3.7rem;
+	font-size: 3.7rem;
+	line-height: 3.7rem;
 }
- 
 
 .-flex-column {
 	flex-direction: column;
@@ -43,7 +39,6 @@ line-height: 3.7rem;
 	line-height: 5rem;
 }
 
-
 .-pg-small {
 	font-size: 2rem;
 	p {
@@ -53,14 +48,13 @@ line-height: 3.7rem;
 
 .-pg-medium {
 	font-size: 4rem;
-	
+
 	margin-top: 3rem;
 
 	p {
 		line-height: 4.4rem;
 	}
 }
-
 
 .-bg-dark {
 	background-color: $dark;
@@ -76,7 +70,6 @@ line-height: 3.7rem;
 	background-color: $light;
 	color: $dark;
 }
-
 
 .-bg-yellow {
 	background-color: $yellow;
@@ -127,8 +120,6 @@ line-height: 3.7rem;
 .-pd-md {
 	padding: 4vw;
 }
-
-
 
 .-fixed {
 	position: fixed;
@@ -195,8 +186,6 @@ line-height: 3.7rem;
 	fill: $light;
 }
 
-
-
 .is-x {
 	transform: rotate(360deg);
 	transform-origin: center;
@@ -244,17 +233,14 @@ line-height: 3.7rem;
 
 //Heading utilities
 
-
-
-
 .-heading-bold {
 	font-family: $bold;
 }
 
 .-heading-medium {
-	font-family: 'Kobe';
+	font-family: "Kobe";
 	font-size: 6rem;
-	line-height:4.86rem;
+	line-height: 4.86rem;
 	letter-spacing: -0.4rem;
 }
 
@@ -276,10 +262,6 @@ line-height: 3.7rem;
 	}
 }
 
-
-
-
-
 //Limit this utility to headings which use one or two words
 .-xl {
 	font-size: 30rem;
@@ -298,7 +280,7 @@ line-height: 3.7rem;
 	}
 }
 
-//Text media queries 
+//Text media queries
 @media screen and (max-width: 1200px) {
 	.paragraph-wrapper {
 		&.-large {
@@ -341,7 +323,7 @@ line-height: 3.7rem;
 				font-size: 3rem;
 				line-height: 3rem;
 			}
-		}	
+		}
 	}
 
 	.heading-wrapper {
