--- a/src/components/Pages/Projects/c-grid.scss
+++ b/src/components/Pages/Projects/c-grid.scss
@@ -128,6 +128,7 @@
 		opacity: 0.4;
 		margin: 0;
 		text-transform: uppercase;
+		font-family: 'Soehne Body';
 		// transform: translateY(20%);
 		// opacity: 0;
 		// transition: transition;
