--- a/src/styles/scss/objects/o-single-project.scss
+++ b/src/styles/scss/objects/o-single-project.scss
@@ -63,8 +63,9 @@
 			&_inner {
 				position: relative;
 				display: flex;
-				align-items: center;
+
 				justify-content: space-between;
+				align-items: flex-start;
 
 				.o-info_overview_intro {
 					width: 70%;
@@ -73,11 +74,12 @@
 
 				.o-info_overview_index {
 					width: 30%;
-					display: flex;
-					flex-wrap: wrap;
+					display: grid;
+					grid-template-columns: repeat(6, 1fr);
 
-					h3 {
+					> div {
 						flex-grow: 1;
+						grid-column: span 3;
 					}
 				}
 
@@ -88,9 +90,13 @@
 						padding-right: 0;
 					}
 
-					.o-info_overview_intro,
-					.o-info_overview_index {
+					.o-info_overview_intro {
 						width: 100%;
+					}
+
+					.o-info_overview_index {
+						width: 50%;
+						margin-top: 2rem;
 					}
 				}
 			}
@@ -105,6 +111,7 @@
 	.o-next_title {
 		font-size: 3rem;
 		position: relative;
+		font-family: 'Courier';
 
 		&::after {
 			position: absolute;
@@ -144,10 +151,16 @@
 		width: 10rem;
 		height: 100%;
 	}
+
+	.o-additional-media .c-grid_item:hover {
+		img {
+			transform: none
+		}
+	}
 }
 
 .o-hero_image-wrapper-2,
-s.o-info_image-wrapper {
+s, .o-info_image-wrapper {
 	overflow: hidden;
 	width: 100%;
 	height: 60vw;
