--- a/src/styles/scss/_vars.module.scss
+++ b/src/styles/scss/_vars.module.scss
@@ -29,7 +29,7 @@ $dark: #101010;
 $dark2: #2e2e2e;
 $lighterDark: #111111;
 $navy: #12233f;
-$red: #030303;
+$red: #e94034;
 $green: #16854B;
 $blue: #0a4d98;
 $yellow: #edc835;
