--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -17,7 +17,10 @@
 @import "../../components/Menu/c-menu.scss";
 @import "../../components/CursorFollower/c-follower.scss";
 @import "../../components/Vector/c-arrow.scss";
+@import "../../components/Vector/c-frame.scss";
 @import "../../components/Footer/c-footer.scss";
+@import "../../components/Pages/Home/c-steps.scss";
+
 
 
 
