--- a/src/components/Pages/Home/c-steps.scss
+++ b/src/components/Pages/Home/c-steps.scss
@@ -1,36 +1,43 @@
 .c-steps {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  gap: 3rem;
-  
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	gap: 3rem;
 
-  &_item {
-    grid-column: span 3;
+	@include media("<=phoneL") {
+		gap: 0;
+	}
 
-    &:nth-child(1) {
-      grid-row: 1/2;
-      grid-column: 1/3;
-    }
+	&_item {
+		grid-column: span 3;
 
-    &:nth-child(2) {
-      grid-row: 2/3;
-      grid-column: 3/5;
-    }
+		&:nth-child(1) {
+			grid-row: 1/2;
+			grid-column: 1/3;
+		}
 
+		&:nth-child(2) {
+			grid-row: 2/3;
+			grid-column: 3/5;
+		}
 
-    &:nth-child(3) {
-      grid-row: 3/4;
-      grid-column: 5/7;
-    }
+		&:nth-child(3) {
+			grid-row: 3/4;
+			grid-column: 5/7;
+		}
 
-    &:nth-child(4) {
-      grid-row: 4/5;
-      grid-column: 3/5;
-    }
+		&:nth-child(4) {
+			grid-row: 4/5;
+			grid-column: 3/5;
+		}
 
-    &:nth-child(5) {
-      grid-row: 5/6;
-      grid-column: 1/3;
-    }
-  }
+		&:nth-child(5) {
+			grid-row: 5/6;
+			grid-column: 1/3;
+		}
+
+		@include media("<=phoneL") {
+			grid-column: 1/7 !important;
+			text-align: center;
+		}
+	}
 }
