--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -20,6 +20,8 @@
 @import "../../components/Vector/c-frame.scss";
 @import "../../components/Footer/c-footer.scss";
 @import "../../components/Pages/Home/c-steps.scss";
+@import "../../components/Lists/c-list.scss";
+@import "../../components/Transition/c-transition-card.scss";
 
 
 
