--- a/src/components/Pages/Projects/c-grid.scss
+++ b/src/components/Pages/Projects/c-grid.scss
@@ -9,6 +9,19 @@
 		flex-direction: column;
 		align-items: stretch;
 
+		&_loader {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: $light;
+			z-index: 99;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+
 		// &.is-in-view .c-grid_img-wrapper,
 		// &.is-in-view .c-grid_title,
 		// &.is-in-view .c-grid_description {
