--- a/src/components/Pages/Home/c-steps.scss
+++ b/src/components/Pages/Home/c-steps.scss
@@ -3,12 +3,18 @@
 	grid-template-columns: repeat(6, 1fr);
 	gap: 3rem;
 
+	
 	@include media("<=phoneL") {
 		gap: 0;
 	}
 
 	&_item {
 		grid-column: span 3;
+
+		.o-text:last-child {
+			max-width: 25vw;
+		}
+	
 
 		&:nth-child(1) {
 			grid-row: 1/2;
@@ -38,6 +44,10 @@
 		@include media("<=phoneL") {
 			grid-column: 1/7 !important;
 			text-align: center;
+
+			.o-text:last-child {
+				max-width: 100%;
+			}
 		}
 	}
 }
