--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -22,6 +22,8 @@
 @import "../../components/Pages/Home/c-steps.scss";
 @import "../../components/Lists/c-list.scss";
 @import "../../components/Transition/c-transition-card.scss";
+@import "../../components/Stories/c-stories.scss";
+@import "../../components/Stories/c-arrow-svg.scss";
 
 
 
