--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -1,4 +1,3 @@
-
 @import "./breakpoints";
 //Utility classes
 
@@ -111,10 +110,10 @@
 	overflow: hidden;
 }
 
-.c-char, .loader-char {
+.c-char,
+.loader-char {
 	transform: translateY(100%);
 	opacity: 0;
-	
 }
 
 .-top {
@@ -143,8 +142,6 @@
 
 .-justify-center {
 	justify-content: center;
-
-	
 }
 .-fullWidth {
 	width: 100%;
@@ -239,10 +236,24 @@
 	}
 }
 
+.is-in-view {
+	.-fadeUp {
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
+
+.-fadeUp {
+	transform: translateY(50%);
+	opacity: 0;
+	transition-delay: 0.4s;
+	transition: 2s ease;
+}
+
 .-ul-small,
 .-text-tiny {
 	font-size: 0.6rem;
-	font-family: 'Roboto Mono', monospace;
+	font-family: "Roboto Mono", monospace;
 	text-transform: uppercase;
 }
 
@@ -253,7 +264,7 @@
 }
 
 .-bold {
-	font-family: 'Kobe Bold';
+	font-family: "Kobe Bold";
 }
 
 .-block {
@@ -264,28 +275,7 @@
 	text-transform: uppercase;
 }
 
-.-text-big {
-	font-size: 2.2rem;
-	font-family: 'Courier' !important;
-	line-height: 6rem !important;
 
-
-	@include media("<=tablet") {
-		.c-star.-inline svg, .c-planet.-inline svg {
-			width: 2rem !important;
-			height: 2rem !important;
-		}
-	}
-
-	@include media(">=phoneL")   {
-		font-size: 3.7rem;
-	}
-
-	@include media(">=desktop") {
-		font-size: 5rem;
-	}
-
-}
 
 .-stretchY {
 	height: 100%;
@@ -307,7 +297,7 @@
 
 //ITCSS Utilies
 .u-gsap-fill-animate {
-	opacity: 0
+	opacity: 0;
 }
 
 .u-line-translate {
@@ -316,10 +306,8 @@
 }
 
 .is-paused .o-loader_background {
-	-webkit-animation-play-state:paused;
-	-moz-animation-play-state:paused;
-	-o-animation-play-state:paused; 
-	animation-play-state:paused !important;
-	
+	-webkit-animation-play-state: paused;
+	-moz-animation-play-state: paused;
+	-o-animation-play-state: paused;
+	animation-play-state: paused !important;
 }
-
