--- a/src/styles/scss/objects/o-h3.scss
+++ b/src/styles/scss/objects/o-h3.scss
@@ -1,6 +1,6 @@
 h3, .o-h3 {
   font-size: 1.5rem;
-  font-family: 'Courier';
+  font-family: 'Canela';
 
   @include media("<=tablet") {
     font-size: 1.4rem !important;
