--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -244,10 +244,11 @@
 }
 
 .-fadeUp {
-	transform: translateY(50%);
-	opacity: 0;
-	transition-delay: 0.4s;
-	transition: 2s ease;
+	.c-line {
+		transform: translateY(100%);
+		opacity: 0;
+		
+	}
 }
 
 .-ul-small,
@@ -274,8 +275,6 @@
 .-uppercase {
 	text-transform: uppercase;
 }
-
-
 
 .-stretchY {
 	height: 100%;
