--- a/src/styles/scss/_vars.module.scss
+++ b/src/styles/scss/_vars.module.scss
@@ -24,8 +24,8 @@ $space-xxxl: calc(7 * 2rem);
 }
 
 //Colors
-$light: #f5f3ef;
-$dark: #101010;
+$light: #F6F5F1;
+$dark: #181818;
 $dark2: #2e2e2e;
 $lighterDark: #111111;
 $navy: #12233f;
