--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -18,8 +18,9 @@
 @import "../../components/CursorFollower/c-follower.scss";
 @import "../../components/Vector/c-arrow.scss";
 @import "../../components/Vector/c-frame.scss";
+@import "../../components/Vector/svg.scss";
 @import "../../components/Footer/c-footer.scss";
-@import "../../components/Pages/Home/c-steps.scss";
+@import "../../components/Pages/Home/o-home_how.scss";
 @import "../../components/Lists/c-list.scss";
 @import "../../components/Transition/c-transition-card.scss";
 @import "../../components/Stories/c-stories.scss";
