--- a/src/components/Pages/Projects/c-grid.scss
+++ b/src/components/Pages/Projects/c-grid.scss
@@ -1,19 +1,24 @@
+.c-frame_revealer {
+	stroke: $light;
+	stroke-width: 15px;
+}
+
 .c-grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	grid-row-gap: 10vw;
 
 	&_item {
-		
 		display: flex;
 		flex-direction: column;
 		align-items: stretch;
 		transform: translateY(50%);
 		opacity: 1;
-		// transition: 500ms ease;
+		
+
 
 		&.is-in-view {
-			transform: translateY(0);	
+			transform: translateY(0);
 			opacity: 1;
 		}
 
@@ -69,11 +74,11 @@
 		}
 
 		&:nth-child(11) {
-      grid-column: 6/13;
+			grid-column: 6/13;
 			height: 50vw;
 		}
 
-    &:nth-child(13) {
+		&:nth-child(13) {
 			grid-column: 1/8;
 			height: 35vw;
 		}
@@ -109,6 +114,12 @@
 		// transform: translateY(40%);
 		// transition: $transition;
 
+		.image {
+			width: 100%;
+			height: 100%;
+			overflow: hidden;
+		}
+
 		img {
 			width: 100%;
 			height: 100%;
@@ -122,7 +133,7 @@
 		transition: $transition;
 
 		@include media("<=tablet") {
-			padding: 0.8rem 2rem;
+			padding: 0.8rem 2rem 0.8rem 0;
 		}
 
 		width: 100%;
@@ -139,6 +150,10 @@
 		font-size: 1.8rem;
 		margin: 0;
 		margin-bottom: 0.8rem;
+		position: relative;
+		
+		
+
 		// transform: translateY(-20%);
 		// opacity: 0;
 		// transition: transition;
@@ -149,7 +164,7 @@
 		opacity: 0.4;
 		margin: 0;
 		text-transform: uppercase;
-		font-family: 'Soehne Body';
+		font-family: "Soehne Body";
 		// transform: translateY(20%);
 		// opacity: 0;
 		// transition: transition;
