--- a/src/components/Stories/c-stories.scss
+++ b/src/components/Stories/c-stories.scss
@@ -1,38 +1,34 @@
 .c-stories {
-	margin: 0 7vw;
+	width: 70vw;
+	margin: 0 auto;
 
 	&_main {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		position: relative;
+		height: 40vw;
+		overflow: hidden;
 	}
 
 	&_indicator,
 	&_main h2,
 	&_main h4,
 	&_main h4 {
-		margin: 2rem 0;
-	}
-
-	&_content {
-		width: 100%;
-		position: relative;
-		display: flex;
-		align-items: center;
-		justify-content: center;
+		margin: 0;
 	}
 
 	&_indicator {
 		width: 100%;
-		padding-left: 9rem;
-		
+		padding-bottom: 3rem;
+
+		z-index: 99;
 
 		.o-text {
 			margin: 0;
-			
+
 			& span {
-				font-family: 'Riposte';
+				font-family: "Riposte";
 			}
 		}
 
@@ -42,34 +38,57 @@
 	}
 
 	&_controls {
-		width: 60px;
-		height: 60px;
+		width: 5rem;
+		height: 5rem;
 		border: 0px;
 		padding: 0;
+		border-radius: 50%;
+		overflow: hidden;
+		position: relative;
+
+		@include media("<=tablet")  {
+			width: 3rem;
+			height: 3rem;
+		}
+
+		&:hover::after {
+			transform: scale(1);
+			top: 0;
+			left: 0;
+		}
+
+		&::after {
+			border-radius: 50%;
+			transition: 600ms ease;
+			position: absolute;
+
+			top: 50%;
+			left: -50%;
+			content: "";
+			width: 100%;
+			height: 100%;
+			background-color: $dark;
+			transform: scale(0.0001);
+		}
 	}
 
 	&_story {
 		position: absolute;
-		padding: 4rem 6rem;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: flex-start;
 		overflow: hidden;
-		width: 100%;
+		width: 60%;
+		height: 100%;
+		top: 0;
+		left: 50%;
+		transform: translateX(-50%);
+		opacity: 0;
 
-		top: 50%;
-		transform: translateY(-50%);
-
-		&:first-child {
-			position: static;
-			transform: none;
-		}
-
-		& * {
-			opacity: 0;
-		}
-
-		&:first-child {
-			* {
-				opacity: 1;
-			}
+		h2 {
+			font-size: 4.5vw;
+			line-height: 4.5vw;
 		}
 	}
 }
