--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -9,6 +9,14 @@
 	padding: $space-xxxl 0;
 }
 
+.-margin-huge {
+	margin: $space-xxxl 0;
+}
+
+.-margin-top-huge {
+	margin: $space-xxxl 0 0 0;
+}
+
 .-padding-top-huge {
 	padding-top: $space-xxxl;
 }
@@ -114,6 +122,29 @@
 .loader-char {
 	transform: translateY(100%);
 	opacity: 0;
+}
+
+.-underline {
+	&::after {
+		position: absolute;
+		transition: transform 500ms ease;
+		bottom: 2px;
+		left: 0;
+		width: 100%;
+		height: 1px;
+		background-color: $dark;
+		content: "";
+		transform-origin: right;
+		transform: scaleX(0);
+	}
+}
+
+
+.-hover-underline {
+	&:hover .-underline::after {
+		transform: scaleX(1);
+		transform-origin: left;
+	}
 }
 
 .-top {
@@ -247,14 +278,13 @@
 	.c-line {
 		transform: translateY(100%);
 		opacity: 0;
-		
 	}
 }
 
 .-ul-small,
 .-text-tiny {
 	font-size: 0.6rem;
-	font-family: "Roboto Mono", monospace;
+
 	text-transform: uppercase;
 }
 
@@ -262,10 +292,6 @@
 	.line:nth-of-type(1) {
 		padding-left: 30%;
 	}
-}
-
-.-bold {
-	font-family: "Kobe Bold";
 }
 
 .-block {
@@ -282,6 +308,18 @@
 
 .-stretchX {
 	width: 100%;
+}
+
+.-text-left {
+	text-align: left;
+}
+
+.-text-center {
+	text-align: center;
+}
+
+.-text-right {
+	text-align: right;
 }
 
 .-text-small {
