--- a/src/components/Footer/c-footer.scss
+++ b/src/components/Footer/c-footer.scss
@@ -1,18 +1,28 @@
 .c-footer {
 	height: $footerHeight;
 	position: relative;
-	
 	bottom: 0;
 	left: 0;
-	z-index: -1;
 	width: 100vw;
 
 	&_content {
 		height: 100%;
 		display: flex;
 		align-items: center;
-		justify-content: space-between;
+		justify-content: center;
 		position: relative;
+		flex-direction: column;
+
+		.c-arrow-button {
+			align-self: flex-start;
+		}
+
+		> div {
+			width: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+		}
 
 		.drawnLogo {
 			width: 12vw;
@@ -25,20 +35,19 @@
 
 	&_bottom {
 		width: 100%;
-		height: 5rem;
+
+		box-sizing: border-box;
 		position: absolute;
 		bottom: 0;
 		left: 0;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-
-		.c-footer_brand {
-			width: 100%;
-		}
+		padding: 2rem;
 
 		nav {
-			width: 100%;
+			display: none;
+
 			height: 100%;
 			ul {
 				display: flex;
@@ -46,8 +55,6 @@
 				align-items: center;
 				height: 100%;
 				justify-content: flex-end;
-
-		
 			}
 		}
 
