--- a/src/components/Pages/Home/o-home_how.scss
+++ b/src/components/Pages/Home/o-home_how.scss
@@ -3,15 +3,16 @@
 }
 
 .c-note {
+	@include media("<=phoneL") {
+		display: none;
+	}
+
 	position: absolute;
 
 	> div {
-			
-			height: 100%;
-			width: 100%;
-		
+		height: 100%;
+		width: 100%;
 	}
-	
 
 	path {
 		fill: $dark;
@@ -51,25 +52,30 @@
 	}
 }
 
-.o-how {
-	position: relative;
-	.o-h1 {
-		width: 40vw;
-		margin: 0 auto;
-	}
+.title,
+.body {
+	width: 17vw;
 
-	.o-text {
-		width: 17vw;
+}
 
-		@include media("<=tablet") {
-			width: 100%;
-		}
-
+.title, .title p {
+	
+		font-size: 4.167vw;
+		line-height: 4.167vw;
+		margin: 2vw 0;
 		p {
-			font-size: 4.167vw;
-			line-height: 4.167vw;
-			margin: 2vw 0;
+			margin: 0;
 		}
+	
+}
+
+.body {
+	font-family: 'Riposte';
+	font-size: 1.2vw;
+	line-height: 1.5vw;
+
+	p {
+		margin: 0;
 	}
 }
 
@@ -84,7 +90,6 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
@@ -113,6 +118,8 @@
 	@include media("<=phoneL") {
 		gap: 0;
 	}
+
+
 
 	&_item {
 		grid-column: span 3;
@@ -146,13 +153,40 @@
 			grid-row: 5/6;
 			grid-column: 3/7;
 		}
+	}
 
-		@include media("<=phoneL") {
-			grid-column: 1/7 !important;
-			text-align: center;
+	@include media("<=phoneL") {
+		&_item {
+			margin-bottom: 8vw;
+		}
 
-			.o-text:last-child {
-				max-width: 100%;
+		.title, .title p {
+			font-size: 8vw;
+			line-height: 8vw;
+		}
+
+		&_sheet {
+			display: none;
+		}
+
+		p {
+			font-size: 3.4vw;
+			line-height: 4.4vw;
+		}
+
+		.title {
+			font-size: 8.3vw;
+			line-height: 8vw;
+			margin: 0;
+		}
+
+		&_item {
+			grid-column: 1/13 !important;
+
+			* {
+				width: 100%;
+				max-width: 100% !important;
+				text-align: center;
 			}
 		}
 	}
