--- a/src/components/Pages/Projects/c-grid.scss
+++ b/src/components/Pages/Projects/c-grid.scss
@@ -14,8 +14,27 @@
 		align-items: stretch;
 		transform: translateY(50%);
 		opacity: 1;
-		
 
+		&:hover::after {
+			opacity: 0.5;
+		}
+
+		&:hover .c-grid_info * {
+			opacity: 1 !important;
+			transform: translateY(0);
+		}
+
+		&::after {
+			transition: 400ms ease;
+			position: absolute;
+			top: 0;
+			left: 0;
+			content: "";
+			background-color: $dark;
+			width: 100%;
+			height: 100%;
+			opacity: 0;
+		}
 
 		&.is-in-view {
 			transform: translateY(0);
@@ -86,6 +105,40 @@
 		@include media("<=tablet") {
 			grid-column: 1/13 !important;
 			height: 80vw !important;
+
+			&::after {
+				display: none;
+			}
+
+			&:hover .c-grid_info * {
+					transform: none;
+					
+			}
+
+			.c-grid_info {
+				position: static;
+				height: 15%;
+				flex-direction: row;
+				align-items: center;
+				padding: 0;
+				margin: 0.5rem 0;
+
+				.c-grid_description, .c-grid_title {
+					opacity: 1;
+					color: $dark;
+					font-size: 1.4rem;
+					transform: none;
+					margin: 0;
+					
+
+
+				}
+
+				.c-grid_description {
+					align-self: center;
+				}
+				
+			}
 		}
 	}
 
@@ -131,19 +184,30 @@
 	&_info {
 		// opacity: 0;
 		transition: $transition;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		padding: 2rem;
+		color: $light;
+		z-index: 99;
 
 		@include media("<=tablet") {
 			padding: 0.8rem 2rem 0.8rem 0;
 		}
 
 		width: 100%;
-
 		display: flex;
 		align-items: flex-start;
 		justify-content: space-between;
 		flex-direction: column;
 		box-sizing: border-box;
-		padding: 0.8rem 0;
+
+		* {
+			transform: translateY(100%);
+			opacity: 0;
+			transition: $transition;
+		}
 	}
 
 	&_title {
@@ -151,8 +215,6 @@
 		margin: 0;
 		margin-bottom: 0.8rem;
 		position: relative;
-		
-		
 
 		// transform: translateY(-20%);
 		// opacity: 0;
@@ -161,10 +223,13 @@
 	}
 
 	&_description {
-		opacity: 0.4;
+		transition-delay: 100ms;
 		margin: 0;
-		text-transform: uppercase;
-		font-family: "Soehne Body";
+		font-family: "Canela";
+		font-size: 1.8rem;
+		text-transform: none;
+		align-self: flex-end;
+
 		// transform: translateY(20%);
 		// opacity: 0;
 		// transition: transition;
