--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -132,7 +132,7 @@
 		left: 0;
 		width: 100%;
 		height: 1px;
-		background-color: $dark;
+		background-color: $light;
 		content: "";
 		transform-origin: right;
 		transform: scaleX(0);
